--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav{
+  display: grid;
+  grid-template-columns: 1fr 6rem;
+  padding: .8rem 2rem;
+  background-color: #33b933;
+  opacity: .8;
+}
+nav>h2{
+  font-size: 2rem;
+  cursor: pointer;
+  color: #fff;
+}
+nav>button{
+  width: 6rem;
+  cursor: pointer;
+  background-color: rgb(74, 74, 190);
+  color: #fff;
+  border: none;
+  border-radius: .4rem;
+  font-size: 1rem;
+}
+.show, .loading{
+  display: flex;
+  justify-content: center;
+  opacity: .8;
+}
+.show>h2, .loading>h2{
+  margin: 10rem 2rem;
+  text-align: center;
+  font-size: 2rem;
+}
+.show>h2>span{
+  color: #33b933;
+}
+.cards{
+  display: grid;
+  margin: 2rem;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+}
+.card{
+  box-shadow: 1px 1px 6px rgb(179, 177, 177);
+  border-radius: .3rem;
+  text-align: center;
+  padding: 1rem 1.5rem;
+}
+.card>p{
+  margin: 1rem 0;
+  opacity: .7;
+}
+@media only screen and (max-width: 965px){
+  .cards{
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media only screen and (max-width: 660px){
+  .cards{
+    grid-template-columns: 1fr;
+  }
 }
